@@ -1,3 +1,7 @@
+2011-04-27  Bernhard Walle <bernhard@bwalle.de>
+
+	* Add Datetime class.
+
 2011-04-26  Bernhard Walle <bernhard@bwalle.de>
 
 	* Add bw::str().
